# prism

./: .dockerignore  .gitignore  .nojekyll  Dockerfile  Makefile  README.md  make_static_docs.py  pyproject.toml
.github/workflows/: cicd.yml  deploy-dbt-docs.yml
calculators/: __init__.py
docs/: TODO.md  details.md  requirements.md
placeholder_seed/: claims.parquet  enrollments.parquet  hhs_hcc_factors.parquet  hhs_hcc_factors_adult.parquet  hhs_hcc_hierarchies.parquet  hhs_hcc_icd10_to_cc.parquet  hhs_hcc_interactions.parquet  members.parquet  plans.parquet  providers.parquet
platform/: __init__.py
ra_calculators/: __init__.py
ra_calculators/aca_risk_calculator/: README.md  __init__.py  calculator.py  hierarchies.py  models.py  table_loader.py
ra_calculators/aca_risk_score_calculator/: README.md  __init__.py  calculator.py  duckdb_to_csv.py  generate_comprehensive_scenarios.py  hierarchies.py  member_processing.py  models.py  scenarios_comprehensive.json  table_loader.py
ra_calculators/aca_risk_score_calculator/tmp_exports/: .~lock.20251229_061224188414_aca_scores_out.csv#  20251229_151416388797_aca_scores_out.csv
ra_dagster/: ELI5.md  README.md  __init__.py  analyses.md  cli.py  decomposition.md  definitions.py  visualizations.md  warehouse_erd.md
ra_dagster/assets/: comparison.py  dashboard.py  decomposition.py  scoring.py  visualizations.py
ra_dagster/automated_execution/: README.md  launch_analyses.py
ra_dagster/configs/: comparison_coding_intensity.yaml  comparison_metal_level.yaml  decomposition_example.yaml  decomposition_lag_analysis.yaml  scoring_audit_risk.yaml  scoring_coding_intensity.yaml  scoring_example.yaml  scoring_metal_level.yaml  scoring_monte_carlo_radv.yaml
ra_dagster/db/: bootstrap.py  run_registry.py
ra_dagster/resources/: duckdb_resource.py
ra_dagster/utils/: run_ids.py
ra_dbt/: .gitignore  .user.yml  README.md  dbt_project.yml  profiles.yml
ra_dbt/models/: dagster_exposures.yml  dagster_sources.yml
ra_dbt/seeds/: properties.yml  raw_enrollments.csv  raw_plans.csv  raw_providers.csv
tests/: test_aca_calculator.py  test_decomposition_interaction.py  test_duckdb_to_csv_runner.py  test_duckdb_to_duckdb_runner.py  test_placeholder.py
(+196 files in other folders)
