[project]
name = "prism"
version = "0.1.0"
description = "Risk adjustment analytics lab for decomposing the risk spectrum"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "altair>=6.0.0",
    "dagster",
    "dagster-dbt",
    "dagster-webserver",
    "dbt-duckdb",
    "duckdb",
    "hccpy",
    "httpx",
    "pandas",
    "polars",
    "pyarrow>=22.0.0",
    "pydantic>=2.0",
    "pyyaml",
    "rich",
    "tabulate",
    "typer",
]

[project.optional-dependencies]
dev = [
    "commitizen",
    "pytest",
    "pytest-cov",
    "ruff",
]

[project.scripts]
prism = "ra_dagster.cli:app"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.hatch.build.targets.wheel]
packages = ["ra_calculators", "ra_dagster"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
